<resources>
    <string name="app_name">IKPMD_App</string>

    '<!--' MainActivity '-->'
    <string name="action_settings">Settings</string>
    <string name="img_description">This is the DinoDeluxe Logo.</string>
    <string name="lbl_credentials">Enter your credentials:</string>
    <string name="lbl_forgot_password">Forgotten password?</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="btn_login">Log in</string>

    '<!--' MainNavigation '-->'
    <string name="title_activity_main_navigation">MainNavigation</string>
    <string name="title_servers">Online Servers</string>
    <string name="title_database_info">Dino Data</string>
    <string name="title_edit_database">Add Dino\'s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh_server_info">Refresh Server Info</string>
    <string name="no_server_found">No server found.</string>
    <string name="save_offline">Save (Offline)</string>
    <string name="show_all_dino_s">Show All Dino\'s</string>
    <string name="create_new_account">Create new account</string>
    <string name="mandatory">Mandatory :</string>
    <string name="username">Username *</string>
    <string name="e_mail_address">E-mail address *</string>
    <string name="password">Password *</string>
    <string name="extra">Extra :</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="in_game_name_alias">In-Game Name/Alias</string>
    <string name="register">Register</string>
    <string name="enter_dino_name">Enter Dino Name</string>
    <string name="add_to_data">Add to data</string>


</resources>
