<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="s1080488.ikpmd_app.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:visibility="invisible"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/mainActivity_vertical_margin"
        android:paddingLeft="@dimen/mainActivity_horizontal_margin"
        android:paddingRight="@dimen/mainActivity_horizontal_margin"
        android:paddingTop="@dimen/mainActivity_vertical_margin">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/img_description"
            app:srcCompat="@drawable/dd_logo_transparent" />

        <TextView
            android:id="@+id/lblEmail"
            style="@style/lbl_style"
            android:text="@string/lbl_credentials" />

        <EditText
            android:id="@+id/txtUsername"
            style="@style/txtField_style"
            android:digits="qwertyuiopasdfghjklzxcvbnm0123456789"
            android:hint="@string/txt_username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtPassword"
            style="@style/txtField_style"
            android:hint="@string/txt_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/btn_style"
            android:layout_gravity="top|center_horizontal"
            android:text="@string/btn_login"
            app:layout_anchor="@+id/include3"
            app:layout_anchorGravity="bottom|center_horizontal" />

        <TextView
            android:id="@+id/lblRegister"
            style="@style/lbl_style"
            android:text="@string/create_new_account" />

        <TextView
            android:id="@+id/lblPassword"
            style="@style/lbl_style"
            android:text="@string/lbl_forgot_password" />

    </LinearLayout>

    <include
        android:id="@+id/include3"
        layout="@layout/content_main" />

</android.support.design.widget.CoordinatorLayout>
